build/log/idf_py_stdout_output_12840
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\P4\Turn_on_the_screen\build\bootloader\esp-idf\esptool_py && C:\Users\pentt\.espressif\python_env\idf5.4_py3.13_env\Scripts\python.exe C:/esp/v5.4.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 C:/P4/Turn_on_the_screen/build/bootloader/bootloader.bin"
Bootloader binary size 0x5890 bytes. 0x770 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\pentt\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20260121\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.4\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/P4/Turn_on_the_screen/build/config -IC:/esp/v5.4.4/esp-idf/components/newlib/platform_include -IC:/esp/v5.4.4/esp-idf/components/freertos/config/include -IC:/esp/v5.4.4/esp-idf/components/freertos/config/include/freertos -IC:/esp/v5.4.4/esp-idf/components/freertos/config/riscv/include -IC:/esp/v5.4.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v5.4.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/esp/v5.4.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/esp/v5.4.4/esp-idf/components/freertos/esp_additions/include -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/include -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/include/soc/esp32p4 -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/dma/include -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/port/esp32p4/. -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/port/esp32p4/include -IC:/esp/v5.4.4/esp-idf/components/esp_hw_support/port/esp32p4/private_include -IC:/esp/v5.4.4/esp-idf/components/heap/include -IC:/esp/v5.4.4/esp-idf/components/heap/tlsf -IC:/esp/v5.4.4/esp-idf/components/log/include -IC:/esp/v5.4.4/esp-idf/components/soc/include -IC:/esp/v5.4.4/esp-idf/components/soc/esp32p4 -IC:/esp/v5.4.4/esp-idf/components/soc/esp32p4/include -IC:/esp/v5.4.4/esp-idf/components/soc/esp32p4/register/hw_ver1 -IC:/esp/v5.4.4/esp-idf/components/hal/platform_port/include -IC:/esp/v5.4.4/esp-idf/components/hal/esp32p4/include -IC:/esp/v5.4.4/esp-idf/components/hal/include -IC:/esp/v5.4.4/esp-idf/components/esp_rom/include -IC:/esp/v5.4.4/esp-idf/components/esp_rom/esp32p4/include -IC:/esp/v5.4.4/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -IC:/esp/v5.4.4/esp-idf/components/esp_rom/esp32p4 -IC:/esp/v5.4.4/esp-idf/components/esp_common/include -IC:/esp/v5.4.4/esp-idf/components/esp_system/include -IC:/esp/v5.4.4/esp-idf/components/esp_system/port/soc -IC:/esp/v5.4.4/esp-idf/components/esp_system/port/include/riscv -IC:/esp/v5.4.4/esp-idf/components/esp_system/port/include/private -IC:/esp/v5.4.4/esp-idf/components/riscv/include -IC:/esp/v5.4.4/esp-idf/components/lwip/include -IC:/esp/v5.4.4/esp-idf/components/lwip/include/apps -IC:/esp/v5.4.4/esp-idf/components/lwip/include/apps/sntp -IC:/esp/v5.4.4/esp-idf/components/lwip/lwip/src/include -IC:/esp/v5.4.4/esp-idf/components/lwip/port/include -IC:/esp/v5.4.4/esp-idf/components/lwip/port/freertos/include -IC:/esp/v5.4.4/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v5.4.4/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v5.4.4/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/P4/Turn_on_the_screen/peripheral/bsp_illuminate/include -IC:/esp/v5.4.4/esp-idf/components/driver/deprecated -IC:/esp/v5.4.4/esp-idf/components/driver/i2c/include -IC:/esp/v5.4.4/esp-idf/components/driver/touch_sensor/include -IC:/esp/v5.4.4/esp-idf/components/driver/twai/include -IC:/esp/v5.4.4/esp-idf/components/esp_pm/include -IC:/esp/v5.4.4/esp-idf/components/esp_ringbuf/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_gpio/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_pcnt/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_gptimer/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_spi/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_mcpwm/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_ana_cmpr/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_i2s/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_sdmmc/include -IC:/esp/v5.4.4/esp-idf/components/sdmmc/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_sdspi/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_sdio/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_dac/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_rmt/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_tsens/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_sdm/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_i2c/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_uart/include -IC:/esp/v5.4.4/esp-idf/components/vfs/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_ledc/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_parlio/include -IC:/esp/v5.4.4/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/P4/Turn_on_the_screen/managed_components/espressif__esp_lcd_ek79007/include -IC:/esp/v5.4.4/esp-idf/components/esp_lcd/include -IC:/esp/v5.4.4/esp-idf/components/esp_lcd/interface -IC:/esp/v5.4.4/esp-idf/components/esp_lcd/rgb/include -IC:/esp/v5.4.4/esp-idf/components/esp_lcd/dsi/include -IC:/P4/Turn_on_the_screen/managed_components/lvgl__lvgl -IC:/P4/Turn_on_the_screen/managed_components/lvgl__lvgl/src -IC:/P4/Turn_on_the_screen/managed_components -IC:/P4/Turn_on_the_screen/managed_components/lvgl__lvgl/examples -IC:/P4/Turn_on_the_screen/managed_components/lvgl__lvgl/demos -IC:/esp/v5.4.4/esp-idf/components/esp_timer/include -IC:/P4/Turn_on_the_screen/managed_components/espressif__esp_lvgl_port/include -IC:/P4/Turn_on_the_screen/managed_components/espressif__esp_wifi_remote/idf_v5.4/include/injected -IC:/esp/v5.4.4/esp-idf/components/esp_wifi/include -IC:/esp/v5.4.4/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/v5.4.4/esp-idf/components/esp_event/include -IC:/esp/v5.4.4/esp-idf/components/esp_netif/include -IC:/P4/Turn_on_the_screen/managed_components/espressif__esp_wifi_remote/include -IC:/P4/Turn_on_the_screen/managed_components/espressif__esp_wifi_remote/idf_v5.4/include -IC:/esp/v5.4.4/esp-idf/components/nvs_flash/include -IC:/esp/v5.4.4/esp-idf/components/esp_partition/include -IC:/esp/v5.4.4/esp-idf/components/esp_http_client/include -IC:/esp/v5.4.4/esp-idf/components/json/cJSON -IC:/P4/Turn_on_the_screen/managed_components/espressif__esp_hosted/host -IC:/P4/Turn_on_the_screen/managed_components/espressif__esp_hosted/host/api/include -march=rv32imafc_zicsr_zifencei_xesploop_xespv -mabi=ilp32f  -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/P4/Turn_on_the_screen=. -fmacro-prefix-map=C:/esp/v5.4.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -march=rv32imafc_zicsr_zifencei_xesppie -std=gnu17 -Wno-old-style-declaration -DESP_LCD_EK79007_VER_MAJOR=1 -DESP_LCD_EK79007_VER_MINOR=0 -DESP_LCD_EK79007_VER_PATCH=4 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/P4/Turn_on_the_screen/main/main.c
C:/P4/Turn_on_the_screen/main/main.c: In function 'ui_build':
C:/P4/Turn_on_the_screen/main/main.c:390:60: error: 'lv_font_montserrat_42' undeclared (first use in this function); did you mean 'lv_font_montserrat_48'?
  390 |     lbl_time = create_label_value(topbar, "--:--", 16, 8, &lv_font_montserrat_42, COL_TEXT);
      |                                                            ^~~~~~~~~~~~~~~~~~~~~
      |                                                            lv_font_montserrat_48
C:/P4/Turn_on_the_screen/main/main.c:390:60: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
